Added reset button and script

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ footer {
 
 
 <button type="button" class="button" role="button" onclick=Pohina() {>Submit</button>
-
+<button type="button" class="button" role="button" onclick=resetForm() {>Reset</button>
 
 
  <p id="output"></p>
@@ -141,7 +141,7 @@ footer {
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/pohina.js"></script>
-
+        <script src="js/reset.js"></script>
 
         <script>
         var map = L.map('map', {
