Rolled back to Helsinki working state

--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ footer {
 
 
 
-        // Markkerit suurpiireille //
+        // Markers based on the main parts of the city //
 
-        var helsinkis = L.marker([60.168469461561536, 24.94051244901858]).addTo(map);
-        helsinkis.bindPopup("<b>South Helsinki</b><br>Southern Major District");
+        var helsinkis = L.marker([60.16591890867457, 24.941673123845824]).addTo(map);
+        helsinkis.bindPopup("<b>Helsinki South</b><br>Southern Major District");
 
         helsinkis.setOpacity (0.0);
 
