Revamped CSS again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet">        
         <style>
 
 a.ex1:hover, a.ex1:active {font-size: 110%;}
@@ -139,6 +141,13 @@ footer {
         <script src="js/labels.js"></script>
         <script src="js/pohina.js"></script>
         <script src="js/reset.js"></script>
+
+
+
+
+
+
+
 
         <script>
         var map = L.map('map', {
