Added more features

--- a/index.html
+++ b/index.html
@@ -70,9 +70,18 @@ footer {
     </br>
 
     <h2>This map will pick the perfect area inside Helsinki for you to live.</h2>
-    <br>
 
-<h3>First we need to know a couple of things about you.</h3>
+    <br>
+    </br>
+
+    <h2>Here you can find more preliminary information about relocating to Helsinki:</h2>
+    <a href="https://www.myhelsinki.fi/en/work-and-study/quick-guide-moving-to-helsinki" target="_blank">Link to Helsinki relocation guide</a>
+
+    
+    <br>
+    </br>
+
+    <h2>But first we need to know a little about your preferences.</h2>
 
     <form id ="form">
 
