--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ footer {
     </br>
 
     <h2>Here you can find more preliminary information about relocating to Helsinki:</h2>
+    <div id="addinlink">
     <a href="https://www.myhelsinki.fi/en/work-and-study/quick-guide-moving-to-helsinki" target="_blank">Link to Helsinki relocation guide</a>
-
+    </div>
     
     <br>
     </br>
@@ -137,7 +138,7 @@ footer {
 <br>
 
 
-        <div id="map">
+        <div id="map" style="width: 1600px; height: 350px;">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
