Rolled back changes

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer {
 <br>
 
 
-<button type="button" class="button" role="button" onclick=Pohina() {>Submit</button>
+<button type="button" class="button" role="button" onclick="Pohina()">Submit</button>
 <button type="button" class="button" role="button" onclick=resetForm() {>Reset</button>
 
 
@@ -150,6 +150,7 @@ footer {
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/pohina.js"></script>
+        <script src="js/pohinarevamp.js"></script>
         <script src="js/reset.js"></script>
 
 
