Remade and refactored the OG pohina function to a new one

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ footer {
 <br>
 
 
-<button type="button" class="button" role="button" onclick="Pohina()">Submit</button>
+<button type="button" class="button" role="button" onclick="Pohina_New()">Submit</button>
 <button type="button" class="button" role="button" onclick=resetForm() {>Reset</button>
 
 
@@ -150,8 +150,7 @@ footer {
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="js/pohina.js"></script>
-        <script src="js/pohinarevamp.js"></script>
+        <script src="js/pohina_new.js"></script>
         <script src="js/reset.js"></script>
 
 
