--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
         <style>
 
 a.ex1:hover, a.ex1:active {font-size: 110%;}
