Added more information for all outcomes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ footer {
     <h2>But first we need to know a little about your preferences. 
     <br>
     </br>
-    Note that in order to get the most accurate assesment, you are required to answer each of the questions on the form.
+    Please answer each question!
     </h2>
 
     <form id ="form">
