Finalized graphical expansion to cover other cities

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ footer {
     <br>
     </br>
 
-    <h2>Go ahead and choose which city you would be relocating to</h2>
+    <h2>Go ahead and choose which city you would be relocating to!</h2>
 
     <br>
     </br>
@@ -92,12 +92,12 @@ footer {
     <nav>
         <a href="hki.html">Helsinki</a>
         <a href="vantaa.html">Vantaa</a>
-        <a href="#espoo">Espoo</a>
-        <a href="#oulu">Oulu</a>
+        <a href="espoo.html">Espoo</a>
+        <a href="oulu.html">Oulu</a>
         <a href="tampere.html">Tampere</a>
-        <a href="#turku">Turku</a>
-        <a href="#pori">Pori</a>
-        <a href="#jyvaskyla">Jyväskylä</a>
+        <a href="turku.html">Turku</a>
+        <a href="pori.html">Pori</a>
+        <a href="jkl.html">Jyväskylä</a>
     </nav>
     </body>
 </html>
