--- a/espoo.html
+++ b/espoo.html
@@ -9,7 +9,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/vantaa.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/espoo.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Jersey+20&display=swap" rel="stylesheet"> 
@@ -21,7 +21,7 @@ a.ex2:hover, a.ex2:active {font-size: 110%;}
 a.ex3:hover, a.ex3:active {font-size: 110%;}    
 
 body {
-    background-image: url("images/Vantaa.jpg"); 
+    background-image: url("images/Espoo.jpg"); 
 }
         
         #map {
@@ -71,14 +71,14 @@ footer {
     <br>
     </br>
 
-    <h2>This map will pick the perfect area inside Vantaa for you to live.</h2>
+    <h2>This map will pick the perfect area inside Espoo for you to live.</h2>
 
     <br>
     </br>
 
-    <h2>Here you can find more preliminary information about relocating to Vantaa:</h2>
+    <h2>Here you can find more preliminary information about relocating to Espoo:</h2>
     <div id="addinlink">
-    <a href="https://www.infofinland.fi/en/vantaa/moving-to-vantaa" target="_blank">Link to Vantaa City Info</a>
+    <a href="https://www.espoo.fi/en/city-espoo/international-espoo/hello-espoo/moving-espoo" target="_blank">Link to Espoo City Info</a>
     </div>
     
     <br>
